# Enterprise-Multi-Tenant-E-Commerce-Platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  FEATURES.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.run.yml  docker-compose.yml  pyproject.toml  run.sqlite3  showcase.html
.github/workflows/: ci.yml
apps/accounts/: admin.py  emails.py  forms.py  managers.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/addresses/: models.py
apps/analytics/: admin.py  apps.py  models.py  urls.py  views.py
apps/catalog/: access.py  admin.py  models.py  serializers.py  services.py  slugs.py  urls.py  views.py
apps/core/: exceptions.py  managers.py  middleware.py  mixins.py  pagination.py  permissions.py  repositories.py  responses.py  schema.py  serializers.py  services.py  signals.py  tenancy.py  validators.py  views.py
apps/finance/: models.py  serializers.py  services.py  urls.py
apps/fraud/: apps.py  engine.py  serializers.py  services.py  urls.py  views.py
apps/inventory/: repositories.py  serializers.py  services.py  tasks.py
apps/notifications/: admin.py  models.py  services.py  urls.py
apps/orders/: admin.py  cart_urls.py  models.py  serializers.py  services.py  urls.py  views.py
apps/payments/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  views.py
apps/payouts/: apps.py  models.py  receivers.py  services.py  views.py
apps/pricing/: apps.py  repositories.py  serializers.py  views.py
apps/procurement/: admin.py  apps.py  models.py  receivers.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/promotions/: admin.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/returns/: admin.py  apps.py  models.py  services.py  urls.py
apps/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
apps/rewards/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/search/: backends.py  views.py  (+1 more)
backend/: .env.example  Dockerfile  entrypoint.sh  manage.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
docker/: Dockerfile
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
requirements/: base.txt  development.txt  production.txt
(+487 files in other folders)
